--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban desk</title>
-    <script type="module" crossorigin src="/assets/index.ce3f01dc.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.6e440809.js">
-    <link rel="stylesheet" href="/assets/index.f12a41ed.css">
+    <script type="module" crossorigin src="/kanban/assets/index.ce3f01dc.js"></script>
+    <link rel="modulepreload" href="/kanban/assets/vendor.6e440809.js">
+    <link rel="stylesheet" href="/kanban/assets/index.f12a41ed.css">
   </head>
   <body>
     <div id="app"></div>
